--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
+    <link rel="manifest" href="farmgame.webmanifest" />
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
